# konvig

./: .ghci  NOTES.markdown  README.markdown  konvig.cabal
examples/: compact1.conf  compact2.conf  nested1.conf  original.conf  prototype.conf  simple1.conf  simple2.conf
lib/Data/Config/: Parser.hs  Pretty.hs  Types.hs
tests/: CheckProgram.hs  RoundTrip.hs  Snippet.hs  fragment.conf
